...
        <item><xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
    </string-array>

    <string name="theme_title">Interface theme</string>
    <string-array name="themes_entries">
        <item>Neon</item>
        <item>Light</item>
        <item>Synth</item>
        <item>Deus Ex</item>
        <item>Abyss</item>
    </string-array>
    <string-array name="themes_values">
        <item>dark</item>
...
